--- a/fdts/s32g.dtsi
+++ b/fdts/s32g.dtsi
@@ -114,7 +114,7 @@
 			};
 
 			gpio: siul2-gpio@4009d700 {
-				compatible = "nxp,s32cc-siul2-gpio";
+				compatible = "nxp,s32g-siul2-gpio", "nxp,s32cc-siul2-gpio";
 
 				reg = <OPADS_SIUL2_0        0 0x0 0x10>,
 				      <OPADS_SIUL2_1        0 0x0 0x18>,
@@ -131,6 +131,8 @@
 				gpio-ranges = <&pinctrl 0   0   102>,
 					/* GPIO 112-190 */
 					      <&pinctrl 112 112 79>;
+				gpio-reserved-ranges = <102 10>,
+						       <123 21>;
 				status = "okay";
 			};
 
