--- a/fdts/s32g.dtsi
+++ b/fdts/s32g.dtsi
@@ -31,6 +31,22 @@
 		};
 	};
 
+	firmware {
+		scmi {
+			gpio_scmi: protocol@81 {
+				reg = <0x81>;
+				#gpio-cells = <2>;
+				gpio-controller;
+				#interrupt-cells = <2>;
+				interrupt-controller;
+
+				/* GPIO ranges : 0-101 & 112-190 */
+				gpio-ranges = <&pinctrl 0   0   102>,
+					      <&pinctrl 112 112 79>;
+			};
+		};
+	};
+
 	clocks {
 		pfe_mac0_rmii: pfe_mac0_rmii {
 			compatible = "fixed-clock";
