--- a/fdts/s32g.dtsi
+++ b/fdts/s32g.dtsi
@@ -33,6 +33,12 @@
 
 	firmware {
 		scmi {
+			pinctrl_scmi: protocol@80 {
+				reg = <0x80>;
+				#pinctrl-cells = <2>;
+				status = "disabled";
+			};
+
 			gpio_scmi: protocol@81 {
 				reg = <0x81>;
 				#gpio-cells = <2>;
