--- a/fdts/s32g3xxa-evb3.dts
+++ b/fdts/s32g3xxa-evb3.dts
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
 /*
- * Copyright 2022 NXP
+ * Copyright 2022-2023 NXP
  */
 
 /dts-v1/;
@@ -14,4 +14,8 @@
 
 &usdhc0 {
 	no-1-8-v;
+};
+
+&wkpu {
+	status = "okay";
 };
