--- a/fdts/s32g.dtsi
+++ b/fdts/s32g.dtsi
@@ -49,6 +49,7 @@
 				/* GPIO ranges : 0-101 & 112-190 */
 				gpio-ranges = <&pinctrl 0   0   102>,
 					      <&pinctrl 112 112 79>;
+				status = "disabled";
 			};
 		};
 	};
